feat:添加获取jwt的相关方法
